--- a/src/main/resources/static/expense/expenseEdit.html
+++ b/src/main/resources/static/expense/expenseEdit.html
@@ -71,6 +71,9 @@
                                     <div class="input-group"><span class="input-group-text">Date </span><input class="form-control" type="date" name="expensedate"/></div>
                                 </div>
                                 <div class="form-group mb-3">
+                                    <div class="input-group"><span class="input-group-text">Amount </span><input class="form-control" type="text" name="amount"></div>
+                                </div>
+                                <div class="form-group mb-3">
                                     <div class="input-group">
                                         <span class="input-group-text">Category </span>
                                         <select class="form-select" aria-label="Default select example" id="dropdown-boot">
@@ -115,6 +118,7 @@
                     $('input[name=id]').val(result["id"]);
                     $('input[name=name]').val(result["name"]);
                     $('input[name=description]').val(result["description"]);
+                    $('input[name=amount]').val(result["amount"]);
 
                     var savedCategoryId = result["category"]["id"];
                     $("#dropdown-boot").append($("<option value=\"" + result["category"]["id"] + "\" selected> " + result["category"]["name"] + "</option>"));
@@ -130,7 +134,7 @@
             }
 
             $("#form").submit(function (event) {
-                putExpense(expenseID, getExpenseJSON($('input[name=id]').val(), $('input[name=name]').val(), $('input[name=description]').val(), $('.form-select').val(), selectedTextPick), function (result) {
+                putExpense(expenseID, getExpenseJSON($('input[name=id]').val(), $('input[name=name]').val(), $('input[name=description]').val(), $('input[name=amount]').val(), $('.form-select').val(), selectedTextPick), function (result) {
                     window.location.replace("/expense");
                 }, function (error) {
                     $("#error-modal").modal('show');
