--- a/src/main/resources/static/dashboard/dashboard.html
+++ b/src/main/resources/static/dashboard/dashboard.html
@@ -292,8 +292,9 @@
                 getExpense(function (result) {
                     var totalExpenses = 0;
                     $.each(result, function (i, item) {
-                        
+                        totalExpenses += item.amount;
                     });
+                    alert(totalExpenses);
                 });
             }
 
