--- a/src/main/resources/static/dashboard/dashboard.html
+++ b/src/main/resources/static/dashboard/dashboard.html
@@ -284,6 +284,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script>
     <script src="assets/js/script.min.js"></script>
+    <script src="../assets/js/app.js"></script>
+    <script src="../assets/js/script.js"></script>
+    <script src="../assets/js/webapp.js"></script>
     <script>
         $(document).ready(function () {
             $(loadData());
