--- a/src/main/resources/static/dashboard/dashboard.html
+++ b/src/main/resources/static/dashboard/dashboard.html
@@ -70,7 +70,7 @@
                                     <div class="row align-items-center no-gutters">
                                         <div class="col me-2">
                                             <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>Expenses (total)</span></div>
-                                            <div class="text-dark fw-bold h5 mb-0"><span>$40,000</span></div>
+                                            <div class="text-dark fw-bold h5 mb-0"><span id="expenseYearly">$40,000</span></div>
                                         </div>
                                         <div class="col-auto"><i class="fas fa-calendar fa-2x text-gray-300"></i></div>
                                     </div>
@@ -293,13 +293,14 @@
             $(loadData());
 
             function loadData() {
-                console.log("loadData();");
                 getExpense(function (result) {
                     var totalExpenses = 0;
                     $.each(result, function (i, item) {
                         totalExpenses += item.amount;
                     });
-                    alert(totalExpenses);
+
+                    $("#expenseYearly").empty();
+                    $("#expenseYearly").append($(totalExpenses));
                 });
             }
 
