--- a/src/main/resources/static/dashboard/dashboard.html
+++ b/src/main/resources/static/dashboard/dashboard.html
@@ -301,6 +301,8 @@
 
                     $("#expenseYearly").empty();
                     $("#expenseYearly").append($(totalExpenses));
+                    alert(totalExpenses);
+                    $('expenseYearly').text(totalExpenses);
                 });
             }
 
