--- a/src/main/resources/static/expense/expense.html
+++ b/src/main/resources/static/expense/expense.html
@@ -144,15 +144,13 @@
                     $.each(result, function (i, item) {
 
                         // date convert
-                        var today = new Date(item.expenseDate);
-                        var dd = String(today.getDate()).padStart(2, '0');
-                        var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
-                        var yyyy = today.getFullYear();
-
-                        today = mm + '/' + dd + '/' + yyyy;
-                        alert(today);
-
-                        $("#tableData").append($("<tr>").append($("<td>").text(item.id)).append($("<td>").text(item.expenseDate)).append($("<td>").text(item.name)).append($("<td>").text(item.description)).append($("<td>").text("CHF " + item.amount)).append($("<td>").text(item.category["name"])).append($(
+                        var convertedDate = new Date(item.expenseDate);
+                        var dd = String(convertedDate.getDate()).padStart(2, '0');
+                        var mm = String(convertedDate.getMonth() + 1).padStart(2, '0'); //January is 0!
+                        var yyyy = convertedDate.getFullYear();
+                        convertedDate = mm + '.' + dd + '.' + yyyy;
+                        
+                        $("#tableData").append($("<tr>").append($("<td>").text(item.id)).append($("<td>").text(convertedDate)).append($("<td>").text(item.name)).append($("<td>").text(item.description)).append($("<td>").text("CHF " + item.amount)).append($("<td>").text(item.category["name"])).append($(
                             "<td>\n" +
                             "<div class=\"btn-group btn-group-sm\" role=\"group\"><a class=\"btn btn-light\" role=\"button\" href=\"/expense/edit?id=" + item.id + "\"> <i class=\"fa fa-edit\"></i></a><button class=\"btn btn-light\" data-id=\"" + item.id + "\" type=\"button\" data-bs-target=\"#confirm-modal\" data-bs-toggle=\"modal\"> <i class=\"fa fa-trash\"></i></button></div>\n" +
                             "</td></tr>"
