--- a/src/main/resources/static/expense/expense.html
+++ b/src/main/resources/static/expense/expense.html
@@ -146,7 +146,7 @@
                         // date convert
                         var convertedDate = new Date(item.expenseDate);
                         var dd = String(convertedDate.getDate()).padStart(2, '0');
-                        var mm = String(convertedDate.getMonth() + 1).padStart(2, '0'); //January is 0!
+                        var mm = String(convertedDate.getMonth() + 1).padStart(2, '0');
                         var yyyy = convertedDate.getFullYear();
                         convertedDate = mm + '.' + dd + '.' + yyyy;
                         
