--- a/src/main/resources/static/expense/expense.html
+++ b/src/main/resources/static/expense/expense.html
@@ -150,7 +150,7 @@
                         var yyyy = convertedDate.getFullYear();
                         convertedDate = mm + '.' + dd + '.' + yyyy;
                         
-                        $("#tableData").append($("<tr>").append($("<td>").text(item.id)).append($("<td>").text(expense_date)).append($("<td>").text(item.name)).append($("<td>").text(item.description)).append($("<td>").text("CHF " + item.amount)).append($("<td>").text(item.category["name"])).append($(
+                        $("#tableData").append($("<tr>").append($("<td>").text(item.id)).append($("<td>").text(convertedDate)).append($("<td>").text(item.name)).append($("<td>").text(item.description)).append($("<td>").text("CHF " + item.amount)).append($("<td>").text(item.category["name"])).append($(
                             "<td>\n" +
                             "<div class=\"btn-group btn-group-sm\" role=\"group\"><a class=\"btn btn-light\" role=\"button\" href=\"/expense/edit?id=" + item.id + "\"> <i class=\"fa fa-edit\"></i></a><button class=\"btn btn-light\" data-id=\"" + item.id + "\" type=\"button\" data-bs-target=\"#confirm-modal\" data-bs-toggle=\"modal\"> <i class=\"fa fa-trash\"></i></button></div>\n" +
                             "</td></tr>"
