--- a/src/main/resources/static/expense/expenseEdit.html
+++ b/src/main/resources/static/expense/expenseEdit.html
@@ -68,7 +68,7 @@
                                     <div class="input-group"><span class="input-group-text">Description </span><input class="form-control" type="text" name="description"></div>
                                 </div>
                                 <div class="form-group mb-3">
-                                    <div class="input-group"><span class="input-group-text">Date </span><input class="form-control" type="date" name="expensedate"/></div>
+                                    <div class="input-group"><span class="input-group-text">Date </span><input class="form-control" type="date" name="expenseDate"/></div>
                                 </div>
                                 <div class="form-group mb-3">
                                     <div class="input-group"><span class="input-group-text">Amount </span><input class="form-control" type="text" name="amount"></div>
@@ -119,6 +119,7 @@
                     $('input[name=name]').val(result["name"]);
                     $('input[name=description]').val(result["description"]);
                     $('input[name=amount]').val(result["amount"]);
+                    $('input[name=expenseDate]').val(result["expenseDate"]);
 
                     var savedCategoryId = result["category"]["id"];
                     $("#dropdown-boot").append($("<option value=\"" + result["category"]["id"] + "\" selected> " + result["category"]["name"] + "</option>"));
@@ -134,7 +135,7 @@
             }
 
             $("#form").submit(function (event) {
-                putExpense(expenseID, getExpenseJSON($('input[name=id]').val(), $('input[name=name]').val(), $('input[name=description]').val(), $('input[name=amount]').val(), $('.form-select').val(), selectedTextPick), function (result) {
+                putExpense(expenseID, getExpenseJSON($('input[name=id]').val(), $('input[name=name]').val(), $('input[name=description]').val(), $('input[name=amount]').val(), $('input[name=expenseDate]').val(), $('.form-select').val(), selectedTextPick), function (result) {
                     window.location.replace("/expense");
                 }, function (error) {
                     $("#error-modal").modal('show');
