--- a/src/main/resources/static/investment/investmentCreate.html
+++ b/src/main/resources/static/investment/investmentCreate.html
@@ -25,7 +25,7 @@
                     <li class="nav-item"><a class="nav-link active" href="/expense"><i class="fas fa-user"></i><span>&nbsp;Expenses</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="/category"><i class="fas fa-table"></i><span>&nbsp;Categories</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><i class="far fa-user-circle"></i><span>&nbsp;Analytics</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="/investment"><i class="fas fa-dollar-sign"></i><span>&nbsp;Investments</span></a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/investment"><i class="fas fa-dollar-sign"></i><span>&nbsp;Investments</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="/profile/edit"><i class="fas fa-user-circle"></i><span>&nbsp;Profile</span></a>
                     <li class="nav-item"><a class="nav-link" href="/logout"><i class="fas fa-user-circle"></i><span>&nbsp;Logout</span></a>
                 </ul>
