--- a/src/main/resources/static/user/profile.html
+++ b/src/main/resources/static/user/profile.html
@@ -24,6 +24,7 @@
                     <li class="nav-item"><a class="nav-link" href="/dashboard"><i class="fas fa-tachometer-alt"></i><span>&nbsp;Dashboard</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="/expense"><i class="fas fa-user"></i><span>&nbsp;Expenses</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="/category"><i class="fas fa-table"></i><span>&nbsp;Categories</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="/investment"><i class="fas fa-dollar-sign"></i><span>&nbsp;Investments</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><i class="far fa-user-circle"></i><span>&nbsp;Analytics</span></a></li>
                     <li class="nav-item"><a class="nav-link active" href="/profile/edit"><i class="fas fa-user-circle"></i><span>&nbsp;Profile</span></a>
                     <li class="nav-item"><a class="nav-link" href="/logout"><i class="fas fa-user-circle"></i><span>&nbsp;Logout</span></a>
