--- a/src/main/resources/static/expense/expenseCreate.html
+++ b/src/main/resources/static/expense/expenseCreate.html
@@ -55,7 +55,7 @@
                     <h3 class="text-dark mb-4">Add expense</h3>
                     <div class="card shadow">
                         <div class="card-header py-3">
-                            <p class="text-primary m-0 fw-bold">Expense records</p>
+                            <p class="text-primary m-0 fw-bold">Expense record</p>
                         </div>
                         <div class="card-body">
                             <form id="form" method="post">
