--- a/src/main/resources/static/investment/investment.html
+++ b/src/main/resources/static/investment/investment.html
@@ -62,7 +62,7 @@
                                 
                                 <div class="col-md-6 text-nowrap">
 
-                                    <div class="btn-group" role="group"><a class="btn btn-light" role="button" href="/category/create"> <i class="fa fa-plus-square-o"></i>&nbsp;Add category</a></div>
+                                    <div class="btn-group" role="group"><a class="btn btn-light" role="button" href="/investment/create"> <i class="fa fa-plus-square-o"></i>&nbsp;Add investment</a></div>
                                     <br /><br />
                                     <!--<div id="dataTable_length" class="dataTables_length" aria-controls="dataTable"><label class="form-label">Show&nbsp;<select class="d-inline-block form-select form-select-sm">
                                                 <option value="10" selected="">10</option>
