--- a/src/main/resources/static/investment/investmentCreate.html
+++ b/src/main/resources/static/investment/investmentCreate.html
@@ -52,18 +52,15 @@
                     </div>
                 </nav>
                 <div class="container-fluid">
-                    <h3 class="text-dark mb-4">Add expense</h3>
+                    <h3 class="text-dark mb-4">Add investment</h3>
                     <div class="card shadow">
                         <div class="card-header py-3">
-                            <p class="text-primary m-0 fw-bold">Expense records</p>
+                            <p class="text-primary m-0 fw-bold">Investment record</p>
                         </div>
                         <div class="card-body">
                             <form id="form" method="post">
                                 <div class="form-group mb-3">
                                     <div class="input-group"><span class="input-group-text">Name </span><input class="form-control" type="text" name="name"></div>
-                                </div>
-                                <div class="form-group mb-3">
-                                    <div class="input-group"><span class="input-group-text">Description </span><input class="form-control" type="text" name="description"></div>
                                 </div>
                                 <div class="form-group mb-3">
                                     <div class="input-group"><span class="input-group-text">Date </span><input class="form-control" type="date" name="expenseDate"/></div>
@@ -72,8 +69,11 @@
                                     <div class="input-group"><span class="input-group-text">Amount </span><input class="form-control" type="text" name="amount"></div>
                                 </div>
                                 <div class="form-group mb-3">
+                                    <div class="input-group"><span class="input-group-text">Buy price </span><input class="form-control" type="text" name="buyprice"></div>
+                                </div>
+                                <div class="form-group mb-3">
                                     <div class="input-group">
-                                        <span class="input-group-text">Category </span>
+                                        <span class="input-group-text">Symbol</span>
                                         <select class="form-select" aria-label="Default select example" id="dropdown-boot">
                                             
                                         </select>
