--- a/src/main/resources/static/investment/investmentCreate.html
+++ b/src/main/resources/static/investment/investmentCreate.html
@@ -63,7 +63,7 @@
                                     <div class="input-group"><span class="input-group-text">Name </span><input class="form-control" type="text" name="name"></div>
                                 </div>
                                 <div class="form-group mb-3">
-                                    <div class="input-group"><span class="input-group-text">Date </span><input class="form-control" type="date" name="expenseDate"/></div>
+                                    <div class="input-group"><span class="input-group-text">Date </span><input class="form-control" type="date" name="investmentDate"/></div>
                                 </div>
                                 <div class="form-group mb-3">
                                     <div class="input-group"><span class="input-group-text">Amount </span><input class="form-control" type="text" name="amount"></div>
@@ -75,7 +75,9 @@
                                     <div class="input-group">
                                         <span class="input-group-text">Symbol</span>
                                         <select class="form-select" aria-label="Default select example" id="dropdown-boot">
-                                            
+                                            <option value="BTC">BTC - Bitcoin</option>
+                                            <option value="ETH">ETH - Ethereum<option>
+                                            <option value="BTC">XRP - Ripple</option>
                                         </select>
                                     </div>
                                 </div>
@@ -101,8 +103,6 @@
     <script>
         $(document).ready(function () {
 
-            $(loadData());
-
             var selectedTextPick = "";
             $('.form-select').change(function() {
                 var selectedText = $(this).find('option:selected').map(function() {
@@ -112,17 +112,8 @@
                 console.log(selectedText);
             });
 
-            function loadData() {
-                getCategory(function (result) {
-                    $("#dropdown-boot").empty();
-                    $.each(result, function (i, item) {
-                        $("#dropdown-boot").append($("<option value=\"" + item.id + "\"> " + item.name + "</option>"));
-                    });
-                });
-            }
-
             $("#form").submit(function (event) {
-                postExpense(getExpenseJSON(null, $('input[name=name]').val(), $('input[name=description]').val(), $('input[name=amount]').val(), $('input[name=expenseDate]').val(), $('.form-select').val(), selectedTextPick), function (result) {
+                postExpense(getExpenseJSON(null, $('input[name=name]').val(), $('input[name=amount]').val(), $('input[name=buyprice]').val(), $('input[name=investmentDate]').val(), selectedTextPick), function (result) {
                     window.location.replace("/expense");
                 }, function (error) {
                     $("#error-modal").modal('show');
