--- a/src/main/resources/static/investment/investmentCreate.html
+++ b/src/main/resources/static/investment/investmentCreate.html
@@ -77,7 +77,7 @@
                                         <select class="form-select" aria-label="Default select example" id="dropdown-boot">
                                             <option value="BTC">BTC - Bitcoin</option>
                                             <option value="ETH">ETH - Ethereum<option>
-                                            <option value="BTC">XRP - Ripple</option>
+                                            <option value="XRP">XRP - Ripple</option>
                                         </select>
                                     </div>
                                 </div>
