--- a/src/main/resources/static/investment/investmentCreate.html
+++ b/src/main/resources/static/investment/investmentCreate.html
@@ -76,7 +76,7 @@
                                         <span class="input-group-text">Symbol</span>
                                         <select class="form-select" aria-label="Default select example" id="dropdown-boot">
                                             <option value="BTC">BTC - Bitcoin</option>
-                                            <option value="ETH">ETH - Ethereum<option>
+                                            <option value="ETH">ETH - Ethereum</option>>
                                             <option value="XRP">XRP - Ripple</option>
                                         </select>
                                     </div>
