--- a/src/main/resources/static/investment/investmentCreate.html
+++ b/src/main/resources/static/investment/investmentCreate.html
@@ -114,6 +114,14 @@
 
 
             $("#form").submit(function (event) {
+
+                alert(selectedTextPick);
+                var buypr = $('input[name=buyprice]').val();
+                console.log(buypr);
+                var ddd = $('input[name=investmentDate]').val();
+                console.log(ddd);
+                var testjson = getInvestmentJSON(null, $('input[name=name]').val(), $('input[name=amount]').val(), $('input[name=buyprice]').val(), $('input[name=investmentDate]').val(), selectedTextPick);
+                console.log(testjson);
                 postInvestment(getInvestmentJSON(null, $('input[name=name]').val(), $('input[name=amount]').val(), $('input[name=buyprice]').val(), $('input[name=investmentDate]').val(), selectedTextPick), function (result) {
                     window.location.replace("/expense");
                 }, function (error) {
